Fix the background not being fully covered

--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -64,7 +64,6 @@ a
   overflow: hidden
 
 #wrap
-  height: 100%
   width: 100%
   position: absolute
   top: 0
